# claude-code-statusline-pro

./: Cargo.toml
.github/workflows/: build-macos.yml
contrib/bailian-cost/: README.md  bailian-cost-refresh.sh  usage.toml
src/components/: rate_limit.rs  tokens.rs
src/config/: component_widgets.rs  schema.rs
src/core/: generator.rs  mod.rs  multiline.rs  wrap.rs
src/themes/: capsule.rs  classic.rs  mod.rs
src/tui/: widgets.rs
