[package]
name = "claude-code-statusline-pro"
version = "4.1.1"
edition = "2021"
rust-version = "1.85"
authors = ["wangnov"]
license = "MIT"
description = "Enhanced statusline for Claude Code with 10x performance"
repository = "https://github.com/Wangnov/claude-code-statusline-pro"
homepage = "https://github.com/Wangnov/claude-code-statusline-pro"
readme = "README.md"
keywords = ["cli", "statusline", "claude", "terminal", "git"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "npm/**",
    "assets/**",
    "package.json",
    "Makefile",
    "CLAUDE.md",
    "CONTRIBUTING.md",
    ".omc/**",
    ".claude/**",
    ".github/**",
    "clippy.toml",
    "rustfmt.toml",
    "rust-toolchain.toml",
]

[dependencies]
# CLI framework
clap = { version = "4.6.0", features = ["derive", "env", "cargo", "color"] }

# Configuration & serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml_edit = { version = "0.25.12", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0.18"

# Terminal handling
crossterm = "0.29.0"

# TUI config editor (uses its own crossterm 0.28 internally; types accessed via ratatui::crossterm)
ratatui = "0.30"
# ANSI → ratatui Line 转换(给 TUI 实时预览上色)
ansi-to-tui = "8.0.1"

# System utilities
dirs = "6.0.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
regex = "1.12"
async-trait = "0.1"
# 折行时按显示列宽计算(CJK/全角=2),等价于 python 的 east_asian_width
unicode-width = "0.2"
dialoguer = "0.12.0"
jsonpath_lib = "0.3"
ureq = { version = "2.12", default-features = false, features = [
    "json",
    "tls",
] }
# 自签证书网关的额度探测:NODE_TLS_REJECT_UNAUTHORIZED=0 时跳过 TLS 校验。
# 与 ureq 共用同一份 rustls(+ring provider);default-features=false 避免拉入 aws-lc-rs。
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
    "tls12",
    "logging",
] }
dateparser = "0.3"

# Git integration
git2 = { version = "0.21.0", default-features = false, features = [
    "https",
    "ssh",
    "vendored-libgit2",
    "vendored-openssl",
] }

# Async runtime (for async config loading and file operations)
tokio = { version = "1.52", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
] }

# TUI editor 的原子保存路径。NamedTempFile::persist 在 Windows 上通过
# MoveFileEx + MOVEFILE_REPLACE_EXISTING 正确实现"目标文件存在时也能替换"
# 的 atomic rename 语义;标准库 fs::rename 在 Windows 旧版本 / 部分情况下
# 无法覆盖已存在文件,会让 `ccsp config edit` 的第二次保存直接失败。
# (dev-dependencies 里原本也有一份,promoted 过来,自动对 tests 可见。)
tempfile = "3.27"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
pretty_assertions = "1.4"
proptest = { version = "1.11", default-features = false, features = ["std"] }
serial_test = "3.5"
tokio = { version = "1.52", features = ["rt", "macros", "test-util"] }
assert_cmd = "2.2"
predicates = "3.1"

[[bin]]
name = "claude-code-statusline-pro"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# cargo-release 配置：保持与现有 git log 风格一致（"chore: release vX.Y.Z"）
# 两阶段发布流程详见 CONTRIBUTING.md
[package.metadata.release]
tag-name = "v{{version}}"
pre-release-commit-message = "chore: release v{{version}}"
tag-message = "Release v{{version}}"
allow-branch = ["main"]
